# virtual_worlds_001

./: .gitignore  ExploringOpenClaw.txt  ExploringRosCompleted.txt  ai_engineering_lab00.md  ant_V_issue_findings.md  going_beyond.excalidraw  just_work_doodle.excalidraw  mcp_example_expl.md  modelfile  modelfileqwen  perplexity_check.py  practice_automating_yourjob.md  practice_automating_yourjob00.md
ai_memory_test/: summary.md  test_cognee.py  test_graphiti.py
dita_editor/: README.md  package.json  server.js
dita_editor/public/: index.html
dita_editor/src/: azaezar.md  book.ditamap  chapetehr.md  concept.md
form_process_server/: datasets_research.md
form_process_server/mcp-server-form-process/: main.py  pyproject.toml  receipts.db
getting_started/: getting_started.ipynb
iot_data/: iot_data.db  populate.py  setupdb.py  simulate_iot.py
mcp-server-dita/: README.md  pyproject.toml
mcp-server-dita/src/mcp_server_dita/: __main__.py  server.py
mcp_ebook/: main.py
pyqt5/: heavy_duty.py  prolevel.py  readme.md  stats01.py  stats02.py  stats03.py
utils/: scratch_place.txt  visualization.py
