[project]
name = "mcp-server-dita"
version = "0.1.0"
description = "MCP server for converting Markdown to PDF using DITA"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
]

[project.scripts]
mcp-server-dita = "mcp_server_dita:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
